[package]
name = "kdoom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
byteorder = "1.4.3"
euclid = "0.22.6"
image = "0.23.14"
lazy_static = "1.4.0"
num-traits = "0.2.14"
thiserror = "1.0.29"
