[package]
name = "dusty-room"
version = "0.0.1"
edition = "2021"
authors = ["John Kugelman <john@kugelman.name>"]
description = "Rusty DOOM"
repository = "https://github.com/jkugelman/dusty-room/"
license = "MIT"
keywords = ["game"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
bytes = "1.1.0"
lazy_static = "1.4.0"
num-traits = "0.2.14"
thiserror = "1.0.29"
